# myCode

./: LICENSE
Health_Service_Kit/: oh-package.json5  readme_cn.md  readme_en.md
Health_Service_Kit/AppScope/: app.json5
Health_Service_Kit/AppScope/resources/base/element/: string.json
Health_Service_Kit/entry/: oh-package.json5
Health_Service_Kit/entry/src/main/: module.json5
Health_Service_Kit/entry/src/main/ets/entryability/: EntryAbility.ets
IntentsKit-codelab-Clientdemo-ArkTS/: .gitignore  README.md  oh-package.json5
IntentsKit-codelab-Clientdemo-ArkTS/AppScope/: app.json5
IntentsKit-codelab-Clientdemo-ArkTS/AppScope/resources/base/element/: string.json
IntentsKit-codelab-Clientdemo-ArkTS/entry/src/main/: module.json5
myCode-main/whu-toy-c-master/include/: codegen.h
myCode-main/whu-toy-c-master/src/: lexer.l  main.cpp
toycc/: CMakeLists.txt  toycc.sln
toycc/toycc/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  output.s  parser.cpp  parser.h  semantic.cpp  semantic.h  test1.tc  token.h  toycc.vcxproj  toycc.vcxproj.filters
toycc/toycc/x64/Debug/: toycc.exe.recipe  vc143.idb
toycc/toycc/x64/Debug/toycc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  toycc.lastbuildstate
whu-toy-c-master/: CMakeLists.txt  LICENSE  README.md
whu-toy-c-master/include/: ast.h  semantic.h  token.h
whu-toy-c-master/src/: codegen.cpp  main.cpp  parser.y  semantic.cpp
(+25 files in other folders)
